k8s-gateway-api-vbeta/others_apis/consul/gateway-api-consul.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
 name: api-gateway
 namespace: consul
spec:
 gatewayClassName: consul-api-gateway
 listeners:  
  - protocol: HTTP
    port: 80
    name: prod-web-gw
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: example-route-1
  namespace: consul
spec:
  parentRefs:
  - name: api-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo
    backendRefs:
    - kind: Service
      name: hi-hostname-api-service
      namespace: consul
      port: 80
      weight: 50
    - kind: Service
      name: hello-hostname-api-service
      namespace: consul
      port: 80
      weight: 50
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: example-route-2
  namespace: consul
spec:
  parentRefs:
  - name: api-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo
    backendRefs:
    - kind: Service
      name: hi-hostname-api-service
      namespace: consul
      port: 8080
      weight: 50
    - kind: Service
      name: hello-hostname-api-service
      namespace: consul 
      port: 8090
      weight: 50
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-app-1
  namespace: consul
spec:
  parentRefs:
  - name: api-gateway
  hostnames:
  - "mvitormais.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /greet/hi
    backendRefs:
    - name: hi-hostname-api-service
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /greet/hello
      method: GET
    backendRefs:
    - name: hello-hostname-api-service
      port: 8080
